fixed tests margins on mobile

--- a/static/Style.css
+++ b/static/Style.css
@@ -30,6 +30,9 @@ body {
         text-align: center;
         width: 100%;
     }
+	.navbar-toggler{
+		margin-top: 5rem;
+	}
     .navbar .navbar-nav .nav-link {
         color: white;
     }
